samples/_failures_safe/1761259145_f422f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffb6a5c8.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ffb6a5c8.c:168:18: error: ‘TOKEN’ undeclared (first use in this function)
  168 |             case TOKEN
      |                  ^~~~~
./samples/SAFE/__tmp_ffb6a5c8.c:168:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ffb6a5c8.c:168:13: error: expected ‘:’ or ‘...’ at end of input
  168 |             case TOKEN
      |             ^~~~
./samples/SAFE/__tmp_ffb6a5c8.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffb6a5c8.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffb6a5c8.c:168:13: error: expected declaration or statement at end of input
